--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,9 @@
     background: whitesmoke;
     margin-right: 5px;
   }
+
+  button:nth-last-child(2),
+  button:nth-last-child(1) {
+  background: tomato;
+  color: white;
+}
